--- a/templates/include/Topbar_tag.html
+++ b/templates/include/Topbar_tag.html
@@ -14,8 +14,15 @@
                     <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">My Account</button>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <button class="dropdown-item" type="button">Sign in</button>
-                            <button class="dropdown-item" type="button">Sign up</button>
+
+                            {% if request.user.is_authenticated %}
+                                <a class="dropdown-item">{{ request.user.Username}}</a>
+                                <a class="dropdown-item" href="{% url 'account:logout' %}">Log out</a>
+                            {% else %}
+                                  <a class="dropdown-item" href="{% url 'account:login' %}">Sign in</a>
+                                  <a class="dropdown-item" href="">Sign up</a>
+                            {% endif %}
+
                         </div>
                     </div>
                     <div class="btn-group mx-2">
