Testing Register create Forget password

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -29,8 +29,15 @@
                         <div>
                             <button class="btn btn-primary py-2 px-4" type="submit" >Login User
                                 </button>
+
                         </div>
+
+
                     </form>
+                      <div class="mt-2">
+                                 <a href="{% url 'account:ForgetPass' %}"><button class="btn btn-primary py-2 px-4" type="submit" >Forget Password
+                                 </button></a>
+                      </div>
                 </div>
             </div>
         </div>
