--- a/templates/include/Topbar_tag.html
+++ b/templates/include/Topbar_tag.html
@@ -20,7 +20,7 @@
                                 <a class="dropdown-item" href="{% url 'account:logout' %}">Log out</a>
                             {% else %}
                                   <a class="dropdown-item" href="{% url 'account:login' %}">Sign in</a>
-                                  <a class="dropdown-item" href="">Sign up</a>
+                                  <a class="dropdown-item" href="{% url 'account:Register' %}">Sign up</a>
                             {% endif %}
 
                         </div>
