--- a/product/templates/product/Shop.html
+++ b/product/templates/product/Shop.html
@@ -171,7 +171,7 @@
                                 <div class="text-center py-4">
                                     <a class="h6 text-decoration-none text-truncate" href="{{ product_obj.get_absolute_url }}">{{ product_obj.title }}</a>
                                     <div class="d-flex align-items-center justify-content-center mt-2">
-                                        <h5>{{ product_obj.price }}</h5><h6 class="text-muted ml-2"><del>{{ product_obj.price }}</del></h6>
+                                        <h5>${{ product_obj.price }}</h5><h6 class="text-muted ml-2"><del>${{ product_obj.price }}</del></h6>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-center mb-1">
                                         <small class="fa fa-star text-primary mr-1"></small>
