--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -12,6 +12,8 @@
                         <tr>
                             <th>Products</th>
                             <th>Price</th>
+                            <th>color</th>
+                            <th>size</th>
                             <th>Quantity</th>
                             <th>Total</th>
                             <th>Remove</th>
@@ -20,25 +22,13 @@
                     <tbody class="align-middle">
                       {% for item in cart  %}
                             <tr>
-                            <td class="align-middle"><img src="img/product-1.jpg" alt="" style="width: 50px;">{{ item.getslug }}</td>
+                            <td class="align-middle"><img src="{{ item.product.image.url }}" alt="" style="width: 50px;">{{ item.product.title }}</td>
                             <td class="align-middle">${{ item.price }}</td>
-                            <td class="align-middle">
-                                <div class="input-group quantity mx-auto" style="width: 100px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-minus" >
-                                        <i class="fa fa-minus"></i>
-                                        </button>
-                                    </div>
-                                    <input type="text" class="form-control form-control-sm bg-secondary border-0 text-center" value="1">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-plus">
-                                            <i class="fa fa-plus"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </td>
-                            <td class="align-middle">$150</td>
-                            <td class="align-middle"><button class="btn btn-sm btn-danger"><i class="fa fa-times"></i></button></td>
+                            <td class="align-middle">{{ item.color }}</td>
+                            <td class="align-middle">{{ item.size }}</td>
+                            <td class="align-middle">{{ item.quantity }}</td>
+                            <td class="align-middle">{{ item.total }}</td>
+                            <td class="align-middle"><button class="btn btn-sm btn-danger"><a href="{% url 'cart:dletecart'   item.k  %}"><i class="fa fa-times"></i></a></button></td>
                         </tr>
                       {% endfor %}
 
@@ -56,20 +46,10 @@
                 </form>
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Cart Summary</span></h5>
                 <div class="bg-light p-30 mb-5">
-                    <div class="border-bottom pb-2">
-                        <div class="d-flex justify-content-between mb-3">
-                            <h6>Subtotal</h6>
-                            <h6>$150</h6>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-medium">Shipping</h6>
-                            <h6 class="font-weight-medium">$10</h6>
-                        </div>
-                    </div>
                     <div class="pt-2">
                         <div class="d-flex justify-content-between mt-2">
                             <h5>Total</h5>
-                            <h5>$160</h5>
+                            <h5>${{ cart.total }}</h5>
                         </div>
                         <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Proceed To Checkout</button>
                     </div>
