--- a/product/templates/product/Shop.html
+++ b/product/templates/product/Shop.html
@@ -12,117 +12,53 @@
             <div class="col-lg-3 col-md-4">
                 <!-- Price Start -->
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by price</span></h5>
-                <div class="bg-light p-4 mb-30">
-                    <form>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" checked id="price-all">
-                            <label class="custom-control-label" for="price-all">All Price</label>
-                            <span class="badge border font-weight-normal">1000</span>
+                <form  method="get" action="{% url 'product:list'%}">
+                    <div class="bg-light p-4 mb-30">
+
+                        <div >
+                            <div>
+                                <label class="control-label">Min Price</label>
+                                <input type="text" class="form-control" name="pricemin" value="{{request.GET.pricemin}}">
+
+                             </div><br>
+                              <div>
+                                    <label class="control-label">Max Price</label>
+                                    <input type="text" class="form-control" name="pricemax" value="{{request.GET.pricemax}}">
+                              </div>
                         </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="price-1">
-                            <label class="custom-control-label" for="price-1">$0 - $100</label>
-                            <span class="badge border font-weight-normal">150</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="price-2">
-                            <label class="custom-control-label" for="price-2">$100 - $200</label>
-                            <span class="badge border font-weight-normal">295</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="price-3">
-                            <label class="custom-control-label" for="price-3">$200 - $300</label>
-                            <span class="badge border font-weight-normal">246</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="price-4">
-                            <label class="custom-control-label" for="price-4">$300 - $400</label>
-                            <span class="badge border font-weight-normal">145</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                            <input type="checkbox" class="custom-control-input" id="price-5">
-                            <label class="custom-control-label" for="price-5">$400 - $500</label>
-                            <span class="badge border font-weight-normal">168</span>
-                        </div>
-                    </form>
-                </div>
+
+                   </div>
                 <!-- Price End -->
 
                 <!-- Color Start -->
-                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by color</span></h5>
-                <div class="bg-light p-4 mb-30">
-                    <form>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" checked id="color-all">
-                            <label class="custom-control-label" for="price-all">All Color</label>
-                            <span class="badge border font-weight-normal">1000</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="color-1">
-                            <label class="custom-control-label" for="color-1">Black</label>
-                            <span class="badge border font-weight-normal">150</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="color-2">
-                            <label class="custom-control-label" for="color-2">White</label>
-                            <span class="badge border font-weight-normal">295</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="color-3">
-                            <label class="custom-control-label" for="color-3">Red</label>
-                            <span class="badge border font-weight-normal">246</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="color-4">
-                            <label class="custom-control-label" for="color-4">Blue</label>
-                            <span class="badge border font-weight-normal">145</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                            <input type="checkbox" class="custom-control-input" id="color-5">
-                            <label class="custom-control-label" for="color-5">Green</label>
-                            <span class="badge border font-weight-normal">168</span>
-                        </div>
-                    </form>
-                </div>
+                    <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by color</span></h5>
+                    <div class="bg-light p-4 mb-30">
+                        {% for object in color %}
+                              <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
+                                <input type="checkbox" class="custom-control-input" id={{object.title}} name="color" value={{object.title}}>
+                                <label class="custom-control-label" for={{object.title}}>{{object.title}}</label>
+
+                              </div>
+                        {% endfor %}
+
+                      </div>
                 <!-- Color End -->
 
                 <!-- Size Start -->
-                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by size</span></h5>
-                <div class="bg-light p-4 mb-30">
-                    <form>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" checked id="size-all">
-                            <label class="custom-control-label" for="size-all">All Size</label>
-                            <span class="badge border font-weight-normal">1000</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-1">
-                            <label class="custom-control-label" for="size-1">XS</label>
-                            <span class="badge border font-weight-normal">150</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-2">
-                            <label class="custom-control-label" for="size-2">S</label>
-                            <span class="badge border font-weight-normal">295</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-3">
-                            <label class="custom-control-label" for="size-3">M</label>
-                            <span class="badge border font-weight-normal">246</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
-                            <input type="checkbox" class="custom-control-input" id="size-4">
-                            <label class="custom-control-label" for="size-4">L</label>
-                            <span class="badge border font-weight-normal">145</span>
-                        </div>
-                        <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
-                            <input type="checkbox" class="custom-control-input" id="size-5">
-                            <label class="custom-control-label" for="size-5">XL</label>
-                            <span class="badge border font-weight-normal">168</span>
-                        </div>
-                    </form>
-                </div>
+                     <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Filter by size</span></h5>
+                     <div class="bg-light p-4 mb-30">
+                        {% for object in size %}
+                              <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
+                                <input type="checkbox" class="custom-control-input" id={{object.title}} name="size"  value={{object.title}}>
+                                <label class="custom-control-label" for={{object.title}}>{{object.title}}</label>
+                              </div>
+                        {% endfor %}
+
+
+                      </div>
+                 <button type="submit" class="btn btn-primary px-3">Apply</button>
                 <!-- Size End -->
+                </form>
             </div>
             <!-- Shop Sidebar End -->
 
@@ -191,19 +127,23 @@
                         <nav>
                           <ul class="pagination justify-content-center">
                             {% if page_obj.has_previous %}
-                                <li class="page-item "><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+                                <li class="page-item "><a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if pricemin %}&pricemin={{pricemin}}{% endif %}{% if pricemax %}&pricemax={{pricemax}}{% endif %}{% if color1 %}&color={{color1}}{% endif %}{% if size1 %}&size={{size1}}{% endif %}{% if request.GET.q %}&q={{request.GET.q}}{% endif %}">Previous</a>
+                                </li>
                             {% endif %}
                             {% for  i in paginator.page_range %}
                                {% if  page_obj.number  == i %}
-                                         <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i}}</a></li>
+                                         <li class="page-item active"><a class="page-link" href="?page={{ i }}{% if pricemin %}&pricemin={{pricemin}}{% endif %}{% if pricemax %}&pricemax={{pricemax}}{% endif %}{% if color1 %}&color={{color1}}{% endif %}{% if size1 %}&size={{size1}}{% endif %}{% if request.GET.q %}&q={{request.GET.q}}{% endif %}">{{ i}}</a>
+                                         </li>
                                {% else %}
-                                      <li class="page-item "><a class="page-link" href="?page={{ i }}">{{ i}}</a></li>
+                                      <li class="page-item "><a class="page-link" href="?page={{ i }}{% if pricemin %}&pricemin={{pricemin}}{% endif %}{% if pricemax %}&pricemax={{pricemax}}{% endif %}{% if color1 %}&color={{color1}}{% endif %}{% if size1 %}&size={{size1}}{% endif %}{% if request.GET.q %}&q={{request.GET.q}}{% endif %}">{{ i}}</a>
+                                      </li>
                                {% endif %}
                             {% endfor %}
 
 
                             {% if page_obj.has_next %}
-                                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+                                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}{% if pricemin %}&pricemin={{pricemin}}{% endif %}{% if pricemax %}&pricemax={{pricemax}}{% endif %}{% if color1 %}&color={{color1}}{% endif %}{% if size1 %}&size={{size1}}{% endif %}{% if request.GET.q %}&q={{request.GET.q}}{% endif %}">Next</a>
+                                </li>
                             {% endif %}
                           </ul>
                         </nav>
